This tweaks a bug with firefox's rendering of md-card. Basically, there is a css prop that sets max height to 100%. Firefox interprets this as the height of the visible viewport rather than 'what is needed', or whatever chrome actually is. By setting this value to inherit, the height is automatically inherited. This works in chrome and firefox.

--- a/src/client/util/table.scss
+++ b/src/client/util/table.scss
@@ -3,6 +3,10 @@ $grey_400: #ddd;
 $grey_138: rgb(138, 138, 138);
 $grey_33: rgb(33, 33, 33);
 
+.firefox-tweak {
+  max-height: inherit;
+}
+
 table.mtna-table {
   border: 0;
   border-collapse: collapse;
